[debian] Add libeigen-quadprog-dev dependency

--- a/debian/control
+++ b/debian/control
@@ -17,6 +17,7 @@ Build-Depends: debhelper (>= 9),
                libboost-thread-dev,
                libboost-timer-dev,
                libtasks-qld-dev|libtasks-dev,
+               libeigen-quadprog-dev,
                libmc-rbdyn-urdf-dev,
                libgeos++-dev,
                mc-rtc-data,
@@ -57,6 +58,7 @@ Depends: cmake,
          libboost-thread-dev,
          libboost-timer-dev,
          libtasks-qld-dev|libtasks-dev,
+         libeigen-quadprog-dev,
          libmc-rbdyn-urdf-dev,
          libgeos++-dev,
          libnanomsg-dev,
