[tests] Test FSM sample controller run

--- a/etc/mc_rtc.yaml
+++ b/etc/mc_rtc.yaml
@@ -105,3 +105,4 @@ VerboseLoader: false
 # ClearControllerModulePath: false
 # ClearRobotModulePath: false
 # ClearObserverModulePath: false
+# ControllerConfigurationPaths: "/path/to/user/configuration/folder"
