--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -141,12 +141,12 @@ set(UPDATE_OBSERVERS "\"Encoder\"")
 controller_test_run(TestObserverController 2001)
 
 # Test run of sample controllers
-macro(controller_sample_test_run NAME NRITER)
+macro(controller_sample_test_run NAME PATH_SUFFIX NRITER)
   set(TEST_CONTROLLER_NAME ${NAME})
   set(OBSERVER_MODULE_PATH "${CMAKE_BINARY_DIR}/src/mc_observers")
   set(PYTHON_CONTROLLER_PATH "${CMAKE_BINARY_DIR}/src/mc_control/python")
   set(ROBOT_MODULE_PATH "${CMAKE_BINARY_DIR}/src/mc_robots")
-  set(TEST_CONTROLLER_PATH "${CMAKE_BINARY_DIR}/src/mc_control/samples/${NAME}")
+  set(TEST_CONTROLLER_PATH "${CMAKE_BINARY_DIR}/src/mc_control/samples/${NAME}${PATH_SUFFIX}")
   if(CMAKE_CONFIGURATION_TYPES)
     set(OBSERVER_MODULE_PATH "${OBSERVER_MODULE_PATH}/$<CONFIGURATION>")
     set(PYTHON_CONTROLLER_PATH "${PYTHON_CONTROLLER_PATH}/$<CONFIGURATION>")
@@ -168,10 +168,23 @@ macro(controller_sample_test_run NAME NRITER)
   add_test(NAME "TestSampleController_${NAME}" COMMAND test_controller_ticker --run_test=RUN -- ${CONFIG_OUT} ${NRITER})
 endmacro()
 
-controller_sample_test_run(CoM 1000)
-controller_sample_test_run(Body6d 1000)
-controller_sample_test_run(Posture 1000)
-controller_sample_test_run(Text 1000)
+controller_sample_test_run(CoM "" 1000)
+controller_sample_test_run(Body6d "" 1000)
+controller_sample_test_run(Posture "" 1000)
+controller_sample_test_run(Text "" 1000)
+
+# Test sample FSM controller
+# set(SAVE_MC_CONTROLLER_INSTALL_PREFIX ${MC_CONTROLLER_INSTALL_PREFIX})
+# set(MC_CONTROLLER_INSTALL_PREFIX ${CMAKE_BINARY_DIR}/src/mc_control)
+# set(TEST_CONTROLLER_CONFIGURATION_PATH ${CMAKE_CURRENT_BINARY_DIR}/FSM/etc)
+# set(TEST_ADDITIONAL_JSON_CONF "\"ControllerConfigurationPath\": \"${TEST_CONTROLLER_CONFIGURATION_PATH}\"")
+# set(AROBASE "@")
+# configure_file(${CMAKE_SOURCE_DIR}/src/mc_control/samples/FSM/etc/FSM.conf.cmake ${CMAKE_CURRENT_BINARY_DIR}/FSM/etc/FSM.conf)
+# unset(AROBASE)
+controller_sample_test_run(FSM "/src" 8000)
+# set(MC_CONTROLLER_INSTALL_PREFIX ${SAVE_MC_CONTROLLER_INSTALL_PREFIX})
+# unset(TEST_ADDITIONAL_JSON_CONF)
+
 
 set(ENABLED_OBSERVERS "")
 set(RUN_OBSERVERS "")
