--- a/src/mc_control/fsm/states/data/StabilizerStanding.yaml
+++ b/src/mc_control/fsm/states/data/StabilizerStanding.yaml
@@ -15,10 +15,14 @@ Stabilizer::Standing:
         linear: [0.3,0.3,0.3]
         angular: [0.5,0.5,0.5]
     Left:
-      rotation: [0,0,0]
+      rotation:
+        roll: 0
+        pitch: 0
       height: 0
     Right:
-      rotation: [0,0,0]
+      rotation:
+        roll: 0
+        pitch: 0
       height: 0
 
 ##
