[utils] build_and_install gracefully handles incremental updates
Do a first pass before installation that checks:
- If the git depencies have been cloned
- If already cloned:
  - Ensures that the local repository is clean (no uncommited/unstaged
  changes, and on the correct branch)
  - If so, pull the repository
- If not cloned, clone on the appropriate branch

- Then it attempts to build and install all dependencies

- Then it builds mc_rtc:
  - Warns if not on the same commit than the remote master branch and
  ask the user for confirmation

The script now fails early if any of these steps fails.
It also generates a log file of the install/update process

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -108,7 +108,7 @@ build_with_script:
   stage: build
   script:
     - cd utils
-    - ./build_and_install.sh
+    - ./build_and_install.sh --user_input false
   tags:
     - GCC
   allow_failure: true
