[ROS] Remove the need for --no-as-needed flag
Closes #7

--- a/plugins/ROS/CMakeLists.txt
+++ b/plugins/ROS/CMakeLists.txt
@@ -27,13 +27,6 @@ if(NOT ${ROSCPP_FOUND})
   return()
 endif()
 
-include(CheckCXXCompilerFlag)
-function(check_as_needed_linker_flag)
-  check_cxx_compiler_flag("-Wl,--as-needed" HAS_AS_NEEDED_LINKER_FLAG)
-  set(HAS_AS_NEEDED_LINKER_FLAG ${HAS_AS_NEEDED_LINKER_FLAG} CACHE INTERNAL "Linker support --as-needed")
-endfunction()
-check_as_needed_linker_flag()
-
 set(mc_rtc_ros_SRC src/mc_rtc_ros/ros.cpp)
 set(mc_rtc_ros_HDR include/mc_rtc/ros.h include/mc_rtc/ros_api.h)
 add_library(mc_rtc_ros SHARED ${mc_rtc_ros_SRC} ${mc_rtc_ros_HDR})
@@ -88,10 +81,5 @@ set(plugin_HDR
   "${CMAKE_CURRENT_SOURCE_DIR}/src/plugin/Services.h")
 add_plugin(ROS "${plugin_SRC}" "${plugin_HDR}")
 set_target_properties(ROS PROPERTIES COMPILE_FLAGS "-DMC_RTC_ROS_PLUGIN_EXPORTS")
-target_link_libraries(ROS PUBLIC mc_rtc_ros)
+target_link_libraries(ROS PUBLIC mc_rtc_ros mc_tasks_ros)
 install(FILES etc/ROS.yaml DESTINATION "${MC_PLUGINS_INSTALL_PREFIX}/etc")
-if(HAS_AS_NEEDED_LINKER_FLAG)
-  target_link_libraries(ROS PRIVATE -Wl,--no-as-needed mc_tasks_ros -Wl,--as-needed)
-else()
-  target_link_libraries(ROS PRIVATE mc_tasks_ros)
-endif()
