[SplineTrajectoryTask] Add completion criteria on wrench
+ fix bug with output of timeElapsed
+ Use wrench completion criteria to handle early impact in
LIPMStabilizer sample FSM

--- a/src/mc_control/samples/LIPMStabilizer/etc/LIPMStabilizer.in.yaml
+++ b/src/mc_control/samples/LIPMStabilizer/etc/LIPMStabilizer.in.yaml
@@ -271,7 +271,11 @@ states:
         weight: 100
         displaySamples: 20
         completion:
-          timeElapsed: true
+          OR:
+            - timeElapsed: true
+            - AND:
+              - timeout: 2.5
+              - wrench: [.nan, .nan, .nan, .nan, .nan, 20] 
         targetSurface:
           surface: RightFootCenter
           robotIndex: 0
