--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -14,6 +14,8 @@ name: Package mc-rtc
 # - Finalize the release
 
 on:
+  repository_dispatch:
+    types: [package-master, package-release]
   push:
     paths-ignore:
       # Changes to those files don't mandate rebuilding a package
@@ -40,7 +42,7 @@ jobs:
     - uses: actions/checkout@v1
       with:
         submodules: recursive
-      if: github.ref != 'refs/heads/master'
+      if: startsWith(github.ref, 'refs/tags/')
     - name: Check version coherency
       run: |
         set -x
@@ -52,7 +54,7 @@ jobs:
         echo "::set-env name=REJECTION::"
         export TAG=`echo ${{ github.ref }} | sed -e 's@refs/tags/@@'`
         echo "::set-env name=RELEASE_TAG::${TAG}"
-      if: github.ref != 'refs/heads/master'
+      if: startsWith(github.ref, 'refs/tags/')
     - name: Delete tag
       run: |
         set -x
@@ -72,7 +74,7 @@ jobs:
       with:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ env.RELEASE_TAG }}
-      if: github.ref != 'refs/heads/master'
+      if: startsWith(github.ref, 'refs/tags/')
   # This job build binary packages for Ubuntu
   build-packages:
     needs: check-tag
@@ -92,7 +94,17 @@ jobs:
     - name: Setup environment
       run: |
         set -x
-        export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
+        if [ "${{ github.event.action }}" == "package-master" ]
+        then
+          export REF=master
+        elif [ "${{ github.event.action }}" == "package-release" ]
+        then
+          export REF=`git tag --sort=committerdate --list 'v[0-9]*'|tail -1`
+          git checkout $REF
+          git submodule sync && git submodule update
+        else
+          export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
+        fi
         if [ $REF == "master" ]
         then
           echo "::set-env name=EXTRA_MIRROR::https://dl.bintray.com/gergondet/multi-contact-head"
@@ -151,7 +163,17 @@ jobs:
     steps:
     - name: Set upload parameters
       run: |
-        export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
+        if [ "${{ github.event.action }}" == "package-master" ]
+        then
+          export REF=master
+        elif [ "${{ github.event.action }}" == "package-release" ]
+        then
+          export REF=`git tag --sort=committerdate --list 'v[0-9]*'|tail -1`
+          git checkout $REF
+          git submodule sync && git submodule update
+        else
+          export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
+        fi
         if [ $REF == "master" ]
         then
           echo "::set-env name=BINTRAY_REPO::multi-contact-head"
@@ -187,7 +209,17 @@ jobs:
     steps:
     - name: Set repository parameters
       run: |
-        export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
+        if [ "${{ github.event.action }}" == "package-master" ]
+        then
+          export REF=master
+        elif [ "${{ github.event.action }}" == "package-release" ]
+        then
+          export REF=`git tag --sort=committerdate --list 'v[0-9]*'|tail -1`
+          git checkout $REF
+          git submodule sync && git submodule update
+        else
+          export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
+        fi
         if [ $REF == "master" ]
         then
           echo "::set-env name=BINTRAY_REPO::multi-contact-head"
