--- a/doc/_data/schemas/State/MetaTasks.json
+++ b/doc/_data/schemas/State/MetaTasks.json
@@ -5,7 +5,7 @@
   "properties":
   {
     "tasks": { "type": "object", "description": "Keys are the name of the tasks and values are MetaTask objects with an optional completion criteria" },
-    "outputCriteriaTasks": { "type": "array", "items": { "type": "string" }, "description": "List of tasks names from which the completion criteria will be used to generate the state's output. The generated output will be of the form \"Taks1=citeria1 AND Task2=criteria2...\" where \"criteria1\" and \"criteria2\" correspond to the evaluated output string for the tasks' criteria (e.g. \"timeout AND speed\"). When empty, the default output OK for the state will be used instead." },
+    "outputCriteriaTasks": { "type": "array", "items": { "type": "string" }, "description": "List of tasks names from which the completion criteria will be used to generate the state's output.<br /><ul><li>When empty, the default output for the state will be used.</li><li>Otherwise the generated output will be of the form \"Taks1=citeria1 | Task2=criteria2...\" where \"criteria1\" and \"criteria2\" correspond to the evaluated output string for the tasks' criteria (e.g. \"timeout AND speed\").</li></ul>" },
     "AddContacts": { "type": "array", "items": { "$ref": "/../../common/fsm_contact.json" },
                      "description": "Add the specified contacts during the state's start"  },
     "RemoveContacts": { "type": "array", "items": { "$ref": "/../../common/fsm_contact.json" },
