--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -143,10 +143,10 @@ controller_test_run(TestObserverController 2001)
 # Test run of sample controllers
 macro(controller_sample_test_run NAME PATH_SUFFIX NRITER)
   set(TEST_CONTROLLER_NAME ${NAME})
-  set(OBSERVER_MODULE_PATH "${CMAKE_BINARY_DIR}/src/mc_observers")
-  set(PYTHON_CONTROLLER_PATH "${CMAKE_BINARY_DIR}/src/mc_control/python")
-  set(ROBOT_MODULE_PATH "${CMAKE_BINARY_DIR}/src/mc_robots")
-  set(TEST_CONTROLLER_PATH "${CMAKE_BINARY_DIR}/src/mc_control/samples/${NAME}${PATH_SUFFIX}")
+  set(OBSERVER_MODULE_PATH "${PROJECT_BINARY_DIR}/src/mc_observers")
+  set(PYTHON_CONTROLLER_PATH "${PROJECT_BINARY_DIR}/src/mc_control/python")
+  set(ROBOT_MODULE_PATH "${PROJECT_BINARY_DIR}/src/mc_robots")
+  set(TEST_CONTROLLER_PATH "${PROJECT_BINARY_DIR}/src/mc_control/samples/${NAME}${PATH_SUFFIX}")
   if(CMAKE_CONFIGURATION_TYPES)
     set(OBSERVER_MODULE_PATH "${OBSERVER_MODULE_PATH}/$<CONFIGURATION>")
     set(PYTHON_CONTROLLER_PATH "${PYTHON_CONTROLLER_PATH}/$<CONFIGURATION>")
@@ -172,9 +172,19 @@ controller_sample_test_run(CoM "" 1000)
 controller_sample_test_run(Body6d "" 1000)
 controller_sample_test_run(Posture "" 1000)
 controller_sample_test_run(Text "" 1000)
+file(GENERATE OUTPUT "${TEST_CONTROLLER_PATH}/etc/Text.conf" INPUT "${PROJECT_SOURCE_DIR}/src/mc_control/samples/Text/etc/Text.conf")
 
 # Test sample FSM controller
 controller_sample_test_run(FSM "/src" 8000)
+set(AROBASE "@")
+set(FSM_STATES_INSTALL_PREFIX "${PROJECT_BINARY_DIR}/src/mc_control/fsm/states/")
+if(CMAKE_CONFIGURATION_TYPES)
+  set(FSM_STATES_INSTALL_PREFIX "${FSM_STATES_INSTALL_PREFIX}/$<CONFIGURATION>")
+endif()
+set(FSM_STATES_DATA_INSTALL_PREFIX "${PROJECT_SOURCE_DIR}/src/mc_control/fsm/states/data/")
+configure_file("${PROJECT_SOURCE_DIR}/src/mc_control/samples/FSM/etc/FSM.conf.cmake" "${CMAKE_CURRENT_BINARY_DIR}/etc/FSM.conf")
+file(GENERATE OUTPUT "${TEST_CONTROLLER_PATH}/etc/FSM.conf" INPUT "${CMAKE_CURRENT_BINARY_DIR}/etc/FSM.conf")
+unset(AROBASE)
 
 set(ENABLED_OBSERVERS "")
 set(RUN_OBSERVERS "")
