--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -76,9 +76,9 @@ jobs:
         cd utils
         if [[ "${{ matrix.os }}" == "windows-latest" ]]
         then
-          ./build_and_install.sh --with-python-support false --build-testing false
+          ./build_and_install.sh --user-input false --with-python-support false --build-testing false
         else
-          ./build_and_install.sh
+          ./build_and_install.sh --user-input false
         fi
     - name: Install dependencies
       uses: jrl-umi3218/github-actions/install-dependencies@master
