--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -161,6 +161,9 @@ jobs:
             arch: i386
     runs-on: ubuntu-18.04
     steps:
+    - uses: actions/checkout@v1
+      with:
+        submodules: recursive
     - name: Set upload parameters
       run: |
         if [ "${{ github.event.action }}" == "package-master" ]
@@ -207,6 +210,9 @@ jobs:
     needs: upload-packages
     runs-on: ubuntu-18.04
     steps:
+    - uses: actions/checkout@v1
+      with:
+        submodules: recursive
     - name: Set repository parameters
       run: |
         if [ "${{ github.event.action }}" == "package-master" ]
