[CompoundJoint] Add by default in new FSMs

--- a/src/mc_control/samples/LIPMStabilizer/etc/LIPMStabilizer.in.yaml
+++ b/src/mc_control/samples/LIPMStabilizer/etc/LIPMStabilizer.in.yaml
@@ -29,10 +29,12 @@ robots:
     - ground
 # General constraints, always on
 constraints:
--  type: contact
--  type: kinematics
-   robotIndex: 0
-   damper: [0.1, 0.01, 0.5]
+- type: contact
+- type: kinematics
+  robotIndex: 0
+  damper: [0.1, 0.01, 0.5]
+- type: compoundJoint
+  robotIndex: 0
 # Collision constraint
 collisions:
 - type: collision
