--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -71,7 +71,7 @@ mc_rtc_test(testMetaTaskLoader mc_tasks)
 mc_rtc_test(testSolverTaskStorage mc_tasks)
 mc_rtc_test(testCompletionCriteria mc_control)
 mc_rtc_test(testSimulationContactPair mc_control)
-mc_rtc_test(testDataStore mc_rtc_utils)
+mc_rtc_test(testDataStore mc_rtc_utils mc_rbdyn)
 
 ###########################
 # -- FSM related tests -- #
