[stabilizer] Implement ZMPCC
- Restore ZMPCC implementation based on lipm_walking_controller@85ffe702cca6105f8098202c89831deee1488c44
- Separate ZMPCC implementation into its own class for clarity

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -157,6 +157,7 @@ set(mc_rbdyn_HDR
 ../include/mc_rbdyn/BodySensor.h
 ../include/mc_rbdyn/configuration_io.h
 ../include/mc_rbdyn/lipm_stabilizer/StabilizerConfiguration.h
+../include/mc_rbdyn/lipm_stabilizer/ZMPCCConfiguration.h
 )
 
 add_library(mc_rbdyn SHARED ${mc_rbdyn_SRC} ${mc_rbdyn_HDR})
@@ -310,6 +311,7 @@ mc_tasks/LookAtTask.cpp
 mc_tasks/LookAtSurfaceTask.cpp
 mc_tasks/MetaTaskLoader.cpp
 mc_tasks/lipm_stabilizer/StabilizerTask.cpp
+mc_tasks/lipm_stabilizer/ZMPCC.cpp
 mc_tasks/lipm_stabilizer/Contact.cpp
 )
 
@@ -342,6 +344,7 @@ set(mc_tasks_HDR
 ../include/mc_tasks/ExactCubicTrajectoryTask.h
 ../include/mc_tasks/lipm_stabilizer/StabilizerTask.h
 ../include/mc_tasks/lipm_stabilizer/Contact.h
+../include/mc_tasks/lipm_stabilizer/ZMPCC.h
 )
 
 add_library(mc_tasks SHARED ${mc_tasks_SRC} ${mc_tasks_HDR})
