[DataStore] Provide more helpful error messages

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -78,6 +78,7 @@ install_mc_rtc_lib(mc_rtc_loader)
 
 set(mc_rtc_utils_SRC
   mc_rtc/Configuration.cpp
+  mc_rtc/DataStore.cpp
   mc_rtc/FlatLog.cpp
   mc_rtc/iterate_binary_log.cpp
   mc_rtc/Logger.cpp
