--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -94,6 +94,7 @@ set(mc_rtc_utils_HDR
   ../include/mc_rtc/log/FlatLog.h
   ../include/mc_rtc/log/iterate_binary_log.h
   ../include/mc_rtc/log/Logger.h
+  ../include/mc_rtc/io_utils.h
   ../include/mc_rtc/utils.h
   ../include/mc_rtc/utils_api.h
   ../include/mc_rtc/constants.h
