[FSM] Minor syntax updates for completions
- Replace ' | ' by the clearer ', '

--- a/doc/_data/schemas/State/MetaTasks.json
+++ b/doc/_data/schemas/State/MetaTasks.json
@@ -5,7 +5,7 @@
   "properties":
   {
     "tasks": { "type": "object", "description": "Keys are the name of the tasks and values are MetaTask objects with an optional completion criteria" },
-    "outputCriteriaTasks": { "type": "array", "items": { "type": "string" }, "description": "List of tasks names from which the completion criteria will be used to generate the state's output.<br /><ul><li>output=\"OK\" if empty</li><li>Otherwise the output will be of the form \"Taks1=citeria1 | Task2=criteria2...\" where \"criteria1\" and \"criteria2\" correspond to the output string of the tasks' completion criteria (e.g. \"timeout AND speed\").</li></ul>" },
+    "outputs": { "type": "array", "items": { "type": "string" }, "description": "List of tasks names from which the completion criteria will be used to generate the state's output.<br /><ul><li>output=\"OK\" if empty</li><li>Otherwise the output will be of the form \"Taks1=citeria1, Task2=criteria2...\" where \"criteria1\" and \"criteria2\" correspond to the output string of the tasks' completion criteria (e.g. \"timeout AND speed\").</li></ul>" },
     "AddContacts": { "type": "array", "items": { "$ref": "/../../common/fsm_contact.json" },
                      "description": "Add the specified contacts during the state's start"  },
     "RemoveContacts": { "type": "array", "items": { "$ref": "/../../common/fsm_contact.json" },
