--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -90,6 +90,7 @@ set(mc_rtc_utils_HDR
   mc_rtc/internals/yaml.h
   mc_rtc/internals/LogEntry.h
   ../include/mc_rtc/Configuration.h
+  ../include/mc_rtc/ConfigurationHelpers.h
   ../include/mc_rtc/MessagePackBuilder.h
   ../include/mc_rtc/log/FlatLog.h
   ../include/mc_rtc/log/iterate_binary_log.h
