[doc][FSM] Add documentation about the mains states
- Document Parallel/MetaTasks/Meta states
- Document the new output generation ability and how to use it to do
branching in the FSM

--- a/doc/_data/tutorials.yml
+++ b/doc/_data/tutorials.yml
@@ -76,6 +76,9 @@
       id: fsm
       title: Using the FSM facilities
     -
+      id: fsm-main-states
+      title: Main FSM states
+    -
       id: fsm-example
       title: FSM controller in practice
     -
