--- a/doc/_examples/yaml/State/MetaTasks.yaml
+++ b/doc/_examples/yaml/State/MetaTasks.yaml
@@ -47,7 +47,7 @@ Example4:
     t2:
       completion:
         eval: 0.0001
-  outputCriteriaTasks: [t1, t2]
+  outputs: [t1, t2]
 # Example4 still have two tasks, objectives are unchanged but:
 # - t1 now has a complex completion criteria
 # - t2 has the same completion criteria but with a different threshold
@@ -56,6 +56,7 @@ Example4:
 # In addition, the outputCriteriaTasks array asks the state to generate
 # its output string based on the completion criterias of tasks "t1" and "t2".
 # The completion output will look like one of the following
-# - t1=eval | t2=eval
-# - t1=timeout AND speed | t2=eval
+# - t1=eval, t2=eval
+# - t1=timeout AND speed, t2=eval
 # It may be used to trigger branch choices in the FSM
+# You may also use the DEFAULT output in your transition maps that will be used in case no other pattern matches
