[FSM][completion] Address all review comments
- Documentation fixes/rewording of some description
- Various code quality improvement

+ add unit test for io_utils.h
  + fix error in overload resolution for io::to_string(containter, ", ")
  which was getting resolved to the lambda overload instead.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -73,6 +73,7 @@ mc_rtc_test(testCompletionCriteria mc_control)
 mc_rtc_test(testSimulationContactPair mc_control)
 mc_rtc_test(testDataStore mc_rtc_utils mc_rbdyn)
 mc_rtc_test(test_mc_rtc_utils mc_rtc_utils)
+mc_rtc_test(test_io_utils mc_rtc_utils)
 
 ###########################
 # -- FSM related tests -- #
