[utils] Define PI constant and conversion helpers
- Move constants.h from mc_rbdyn to mc_rtc
- Define mc_rtc::constants::PI as EIGEN_PI
- Add helpers mc_rtc::constants::toRad and mc_rtc::constants::toDeg to
help convert to radian/degrees
- Removes the need for boost numeric_constants

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -96,6 +96,7 @@ set(mc_rtc_utils_HDR
   ../include/mc_rtc/log/Logger.h
   ../include/mc_rtc/utils.h
   ../include/mc_rtc/utils_api.h
+  ../include/mc_rtc/constants.h
   ../include/mc_rtc/DataStore.h
 )
 
