--- a/src/mc_control/samples/LIPMStabilizer/etc/LIPMStabilizer.in.yaml
+++ b/src/mc_control/samples/LIPMStabilizer/etc/LIPMStabilizer.in.yaml
@@ -66,12 +66,12 @@ states:
     AddContacts:
     - r1: hrp2_drc
       r2: ground
-      r1Surface: LeftFootCenter
+      r1Surface: LeftFoot
       r2Surface: AllGround
       dof: [0, 0, 1, 1, 1, 0]
     - r1: hrp2_drc
       r2: ground
-      r1Surface: RightFootCenter
+      r1Surface: RightFoot
       r2Surface: AllGround
       dof: [0, 0, 1, 1, 1, 0]
 
@@ -85,8 +85,8 @@ states:
       # Default values for these robot-specific parameters are set in the corresponding robot module.
       # You may choose to override any of them here, with due caution.
       hrp2_drc:
-        leftFootSurface: LeftFootCenter
-        rightFootSurface: RightFootCenter
+        leftFootSurface: LeftFoot
+        rightFootSurface: RightFoot
         friction: 0.8
         torsoBodyName: CHEST_LINK1
         # Configuration  of the QP tasks used by the stabilizer
@@ -150,7 +150,7 @@ states:
         stiffness: 10
         weight: 500
         robotIndex: 0
-        surface: "RightFootCenter"
+        surface: "RightFoot"
         moveWorld:
           translation: [0,0,0.1]
         completion:
@@ -164,7 +164,7 @@ states:
     base: LIPMStabilizer::LiftRightFoot
     tasks:
       LiftFootTask:
-        surface: "LeftFootCenter"
+        surface: LeftFoot
   
   LIPMStabilizer::PutRightFoot:
     base: MetaTasks
@@ -172,7 +172,7 @@ states:
       PutFootAdmittance:
         type: admittance
         robotIndex: 0
-        surface: "RightFootCenter"
+        surface: RightFoot
         stiffness: [10, 10, 10, 10, 10, 3]
         damping: [6.3, 6.3, 6.3, 6.3, 6.3, 300]
         admittance: [0,0,0,0,0,0.001]
@@ -194,7 +194,7 @@ states:
     base: LIPMStabilizer::PutRightFoot
     tasks:
       PutFootAdmittance:
-        surface: "LeftFootCenter"
+        surface: LeftFoot
   
   LIPMStabilizer::Stabilized::LiftRightFoot:
     base: Parallel
@@ -264,7 +264,7 @@ states:
     tasks:
       SwingFootTrajectory:
         type: exact_cubic_trajectory
-        surface: RightFootCenter
+        surface: RightFoot
         robotIndex: 0
         stiffness: 10000.0
         duration: 5.0
@@ -277,7 +277,7 @@ states:
               - timeout: 2.5
               - wrench: [.nan, .nan, .nan, .nan, .nan, 20] 
         targetSurface:
-          surface: RightFootCenter
+          surface: RightFoot
           robotIndex: 0
           # Aim 5mm above ground as the FSM does not have early-impact detection
           translation: [0.1, 0.0, 0.005]
@@ -290,9 +290,9 @@ states:
     base: LIPMStabilizer::RightFootTrajectory
     tasks:
       SwingFootTrajectory:
-        surface: LeftFootCenter
+        surface: LeftFoot
         targetSurface:
-          surface: LeftFootCenter
+          surface: LeftFoot
           translation: [0.1, 0.0, 0.005]
           rotation: [0,0,0]
           # control points in target surface frame
@@ -334,7 +334,7 @@ states:
     tasks:
       SwingFootTrajectory:
         targetSurface:
-          surface: RightFootCenter
+          surface: RightFoot
           robotIndex: 0
           translation: [-0.1, 0.0, 0.005]
           rotation: [0, 0, 0]
@@ -346,9 +346,9 @@ states:
     base: LIPMStabilizer::RightFootBackwardTrajectory
     tasks:
       SwingFootTrajectory:
-        surface: LeftFootCenter
+        surface: LeftFoot
         targetSurface:
-          surface: LeftFootCenter
+          surface: LeftFoot
           translation: [-0.1, 0.0, 0.005]
           rotation: [0,0,0]
           # control points in target surface frame
