[mc_rbdyn] Store generic sensors in Robot

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -100,6 +100,7 @@ set(mc_rtc_utils_HDR
   ../include/mc_rtc/utils_api.h
   ../include/mc_rtc/constants.h
   ../include/mc_rtc/DataStore.h
+  ../include/mc_rtc/type_name.h
 )
 
 add_library(mc_rtc_utils SHARED ${mc_rtc_utils_SRC} ${mc_rtc_utils_HDR})
