[RobotByName] Load constraints by robot name

--- a/src/mc_control/samples/FSM/etc/FSM.in.conf
+++ b/src/mc_control/samples/FSM/etc/FSM.in.conf
@@ -29,12 +29,10 @@
     },
     {
       "type": "dynamics",
-      "robotIndex": 0,
       "damper": [0.1, 0.01, 0.5]
     },
     {
-      "type": "compoundJoint",
-      "robotIndex": 0
+      "type": "compoundJoint"
     }
   ],
   // Collision constraint
