[doc] Add a page to help debugging LSSOL output 6
Closes #205 (GitLab)

--- a/doc/_data/tutorials.yml
+++ b/doc/_data/tutorials.yml
@@ -128,3 +128,6 @@
     -
       id: new-robot
       title: Integrate a new robot in mc_rtc
+    -
+      id: debug-lssol-output-6
+      title: Debugging LSSOL output 6
