[benchmarks] Fix benchmarks

--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -21,3 +21,4 @@ endmacro()
 mc_rtc_benchmark(benchCompletionCriteria mc_control)
 mc_rtc_benchmark(benchSimulationContactSensor mc_control)
 mc_rtc_benchmark(benchRobotLoading mc_rbdyn)
+mc_rtc_benchmark(benchAllocTasks mc_tasks)
