--- a/doc/_examples/yaml/State/Message.yaml
+++ b/doc/_examples/yaml/State/Message.yaml
@@ -3,3 +3,10 @@ WarningDebugMessage:
   base: Message
   type: warning
   message: 'Warning: the following action may be dangerous'
+GUIMessage:
+  base: Message
+  gui: true
+  log: false
+  category: ["Action"]
+  prefix: "Vision check"
+  message: "Please check that the object has successfully been detected."
