--- a/doc/_examples/yaml/MetaTask/AddContactTask.yaml
+++ b/doc/_examples/yaml/MetaTask/AddContactTask.yaml
@@ -2,8 +2,8 @@ type: addContact
 contact:
   r1Surface: surf1
   r2Surface: surf2
-  r1Name: jvrc1
-  r2Name: robot2
+  r1: jvrc1
+  r2: robot2
   isFixed: false
 speed: 0.05
 stiffness: 1.0
