--- a/benchmarks/CMakeLists.txt
+++ b/benchmarks/CMakeLists.txt
@@ -16,6 +16,10 @@ macro(mc_rtc_benchmark NAME)
   endif()
   target_link_libraries(${NAME} benchmark ${ARGN})
   generate_msvc_dot_user_file(${NAME})
+  # Add benchmark as unit-test
+  if(${BUILD_TESTING})
+    add_test(${NAME} ${NAME})
+  endif()
 endmacro()
 
 mc_rtc_benchmark(benchCompletionCriteria mc_control)
