[benchmarks][CI] Add missing dependency to google-benchmark

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -93,10 +93,10 @@ jobs:
         compiler: ${{ matrix.compiler }}
         build-type: ${{ matrix.build-type }}
         ubuntu: |
-          apt: cython cython3 python-nose python3-nose python-numpy python3-numpy python-coverage python3-coverage python-setuptools python3-setuptools libeigen3-dev doxygen doxygen-latex libboost-all-dev libtinyxml2-dev libgeos++-dev libnanomsg-dev libyaml-cpp-dev libltdl-dev
+          apt: cython cython3 python-nose python3-nose python-numpy python3-numpy python-coverage python3-coverage python-setuptools python3-setuptools libeigen3-dev doxygen doxygen-latex libboost-all-dev libtinyxml2-dev libgeos++-dev libnanomsg-dev libyaml-cpp-dev libltdl-dev libbenchmark-dev
         macos: |
           cask: gfortran
-          brew: eigen boost tinyxml2 geos nanomsg yaml-cpp pkg-config libtool
+          brew: eigen boost tinyxml2 geos nanomsg yaml-cpp pkg-config libtool google-benchmark
           pip: Cython coverage nose numpy
         windows: |
           pip: Cython coverage nose numpy
