--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -111,6 +111,8 @@ jobs:
               ref: 1.1.5
             - path: jbeder/yaml-cpp
               ref: 29dcf92f870ee51cce8d68f8fcfe228942e8dfe1
+            - path: google/benchmark
+              ref: 1.3.0
         github: |
           - path: humanoid-path-planner/hpp-spline
             ref: v4.7.0
